--- a/technology.html
+++ b/technology.html
@@ -47,7 +47,7 @@
   </section>
 
   <main class="container tech-steps">
-    <!-- STEP 1 (image left, text right, number on right) -->
+    <!-- STEP 1 -->
     <section class="tech-step">
       <div class="step-inner">
         <figure class="step-media">
@@ -64,7 +64,7 @@
       </div>
     </section>
 
-    <!-- STEP 2 (image right, text left, number on left) -->
+    <!-- STEP 2 -->
     <section class="tech-step reverse">
       <div class="step-inner">
         <figure class="step-media">
@@ -81,7 +81,7 @@
       </div>
     </section>
 
-    <!-- STEP 3 (repeat pattern) -->
+    <!-- STEP 3 -->
     <section class="tech-step">
       <div class="step-inner">
         <figure class="step-media">
@@ -97,6 +97,7 @@
       </div>
     </section>
 
+    <!-- STEP 4 -->
     <section class="tech-step reverse">
       <div class="step-inner">
         <figure class="step-media">
@@ -112,7 +113,8 @@
       </div>
     </section>
 
-    <section class="tech-step reverse">
+    <!-- STEP 5 -->
+    <section class="tech-step">
       <div class="step-inner">
         <figure class="step-media">
           <img src="images/step_4.png" alt="Police Mobile App" />
@@ -127,6 +129,7 @@
       </div>
     </section>
 
+    <!-- STEP 6 -->
     <section class="tech-step reverse">
       <div class="step-inner">
         <figure class="step-media">
@@ -134,7 +137,7 @@
         </figure>
 
         <div class="step-card">
-          <h2><strong>5.</strong> Payment Processing</h2>
+          <h2><strong>6.</strong> Payment Processing</h2>
           <p>
             SecuriStop can optionally provide comprehensive payment processing capabilities, streamlining operations and reducing the administrative burden on government websites and personnel. Our goal is to deliver a seamless, end-to-end image-to-payment solution that enables efficient citation management without placing additional strain on government resources.
           </p>
