--- a/technology.html
+++ b/technology.html
@@ -117,7 +117,7 @@
     <section class="tech-step">
       <div class="step-inner">
         <figure class="step-media">
-          <img src="images/step_4.png" alt="Police Mobile App" />
+          <img src="images/mobile_app.png" alt="Police Mobile App" />
         </figure>
 
         <div class="step-card">
