--- a/technology.html
+++ b/technology.html
@@ -85,7 +85,7 @@
     <section class="tech-step">
       <div class="step-inner">
         <figure class="step-media">
-          <img src="images/license_plate_OCR.png" alt="Optical character recognition" />
+          <img src="images/ocr_example.png" alt="Optical character recognition" />
         </figure>
 
         <div class="step-card">
