meet the team better statements

--- a/ourteam.html
+++ b/ourteam.html
@@ -48,9 +48,14 @@
       <div class="bio">
         <h2>Jorge Canovas, CEO & Co-founder</h2>
         <p>
-          Co-founder 1 is an engineer and entrepreneur with a background in
-          intelligent systems and product development. Passionate about
-          developing safety technologies that make a real impact.
+          With a distinguished 25-year career in global compliance and strategic leadership, 
+          Jorge Canovas brings deep expertise and vision to his role. Jorge's background 
+          includes senior roles at industry-leading organizations and a strong foundation in legal 
+          and regulatory frameworks. His leadership style emphasizes integrity, operational excellence, 
+          and fortifying the company's national presence. At the helm of our organization, Jorge is 
+          committed to driving our strategic growth agenda, fostering a culture of accountability 
+          and innovation, and ensuring that we deliver on our promise of excellence to clients, 
+          partners, and stakeholders.
         </p>
       </div>
     </div>
@@ -60,9 +65,16 @@
       <div class="bio">
         <h2>Nick Canovas, CTO & Co-founder</h2>
         <p>
-          Co-founder 2 brings expertise in embedded systems and operations.
-          With years of experience in systems integration, they ensure SecuriStop
-          technologies are robust and scalable.
+          With a background in aerospace engineering and technology leadership, 
+          Nick Canovas brings extensive experience to the role of CTO. In his previous position, 
+          he worked as an aerospace engineer at NASA, where he contributed to research for advanced 
+          propulsion system techology and aircraft vehicle design. Nick has also previously worked for other various 
+          engineering firms across indsutry and government, driving innovation in system design, software architecture, and 
+          mission-critical hardware along the way. In his current role, Nick leads our technology roadmap, 
+          combining his deep systems engineering expertise with a vision for scalable, 
+          high-impact solutions. He's committed to leveraging aerospace-grade rigor and industry 
+          best practices to build the next generation of products and platforms - and to empower 
+          our engineering teams to solve hard problems with clarity and creativity.
         </p>
       </div>
     </div>
