added justify to meet the team

--- a/ourteam.html
+++ b/ourteam.html
@@ -47,7 +47,7 @@
       <img src="images/jorge-canovas-headshot.jpg" alt="Jorge Canovas" class="headshot" />
       <div class="bio">
         <h2>Jorge Canovas, CEO & Co-founder</h2>
-        <p>
+        <p style="text-align: justify;">
           With a distinguished 25-year career in global compliance and strategic leadership, 
           Jorge Canovas brings deep expertise and vision to his role. Jorge's background 
           includes senior roles at industry-leading organizations and a strong foundation in legal 
@@ -64,7 +64,7 @@
       <img src="images/nicholas-canovas-headshot.jpg" alt="Nick Canovas" class="headshot" />
       <div class="bio">
         <h2>Nick Canovas, CTO & Co-founder</h2>
-        <p>
+        <p style="text-align: justify;">
           With a background in aerospace engineering and technology leadership, 
           Nick Canovas brings extensive experience to the role of CTO. In his previous position, 
           he worked as an aerospace engineer at NASA, where he contributed to research for advanced 
