Updated text on the about and home pages. Need to chek the box information spill

--- a/about.html
+++ b/about.html
@@ -42,12 +42,17 @@
 
   <main class="container about-section">
     <h1>Taking a Technology-Driven Approach to Safety and Deterrence</h1>
-    <p>
-      We believe our technology has the power to deter school bus traffic violations before they happen. 
-      Our team is made up of forward-thinking technologists and experienced leaders, 
-      united by a shared mission: protecting children across the country by making roads safer for every school bus.
+    <p>Securistop exists to protect children by delivering the most accurate, 
+      secure, and enforceable stop-arm safety system in the nation. Our mission 
+      is to support law enforcement with reliable, court-ready evidence and to 
+      deter violations before they become tragedies.
     </p>
-
+    <p>Securistop was founded to stop <strong>preventable</strong> harm. We build 
+      enforcement technology that gives officers the tools they need to hold dangerous 
+      drivers accountable and to ensure every school bus is protected with <strong>secure, 
+      verifiable, and defensible evidence</strong>.
+    </p>
+    
     <h2>In a nutshell, SecuriStop is built to deliver on these key objectives:</h2>
 
     <ol class="styled-list">
