--- a/index.html
+++ b/index.html
@@ -53,19 +53,29 @@
       <div class="strengths-grid">
         <div class="strength-bubble strength1">
           <h3>Deterrence</h3>
-          <p>We work with local legislatures and school districts to deter those from violating traffic laws.</p>
+          <p>We work with legislators, school districts, and police leadership 
+            to strengthen enforcement mechanisms and reduce violations. 
+            Our approach combines clear legal authority with precise technology to 
+            deliver true deterrence, not symbolic compliance.</p>
         </div>
         <div class="strength-bubble strength2">
           <h3>ML-Enhanced Event Capture</h3>
-          <p>We use the most cutting edge techniques for the lowest cost to the taxpayer.</p>
+          <p>Our system uses advanced machine-learning tools to document violations 
+            with forensic-grade accuracy. Each event is time-synced, encrypted, and 
+            preserved according to evidentiary standards to support successful prosecution.</p>
         </div>
         <div class="strength-bubble strength3">
           <h3>Collaboration with Law Enforcement</h3>
-          <p>We work hand-in-hand with partners in law enforcement to ensure accuracy.</p>
+          <p>PatrolSight™ is built around law-enforcement judgment, not automation. 
+            Officers review every case, verify every element of the offense, and maintain 
+            full control of the evidentiary chain, ensuring accuracy, fairness, and court-ready documentation.</p>
         </div>
         <div class="strength-bubble strength4">
           <h3>Penalization</h3>
-          <p>We directly ticket those who violate traffic laws, ensuring fair justice is brought to those who endanger our children.</p>
+          <p>We hold violators accountable through officer-verified citations that 
+            meet the highest evidentiary standards. Every case is reviewed by law 
+            enforcement, ensuring accurate enforcement, consistent application of 
+            the law, and a strong foundation for prosecution.</p>
         </div>
       </div>
     </section>
@@ -75,8 +85,18 @@
         <div class="purpose-content">
           <h2>Our Purpose</h2>
           <!-- <h3>At SecuriStop, we strive to end the wide-spread issue of school bus stop sign violations through deterrence and the use of advanced cutting-edge methods.</h3> -->
-          <h3>Securistop exists to protect children by delivering the most accurate, secure, and enforceable stop-arm safety system in the nation. Our mission is to support law enforcement with reliable, court-ready evidence and to deter violations before they become tragedies.</h3>
-          <p>Securistop was founded to stop <strong>preventable</strong> harm. We build enforcement technology that gives officers the tools they need to hold dangerous drivers accountable and to ensure every school bus is protected with <strong>secure, verifiable, and defensible evidence</strong>.
+          <h3>At SecuriStop, we are committed to eliminating illegal school-bus passings 
+            through disciplined deterrence, advanced technology, and close partnership with 
+            law enforcement.
+          </h3>
+          <p>We know these violations are preventable, and we refuse to leave children 
+            unprotected. Our team is driven because we have seen firsthand what happens 
+            when accountability breaks down, and we will not allow that to continue.
+          </p>
+          <p>We operate the way law enforcement operates: with integrity, precision, and 
+            strict adherence to evidence. Our work is shaped by core values that align 
+            directly with public-safety standards and prosecutorial expectations.
+          </p>
         </div>
       </div>
     </section>
