--- a/technology.html
+++ b/technology.html
@@ -57,7 +57,11 @@
         <div class="step-card">
           <h2><strong>1.</strong> Camera Detection & Capture</h2>
           <p>
-            High-speed camera sensors mounted on the exterior of the bus monitor the surrounding traffic during all bus stops with passengers exiting. When an object enters the detection zone, the system triggers a short, high-resolution burst capture to ensure at clear imaging. Exposure, shutter timing, and IR illumination are adjusted dynamically for day/night conditions.
+            High-speed camera sensors mounted on the exterior of the bus monitor the surrounding 
+            traffic during all bus stops with passengers exiting. When an object enters the 
+            detection zone, the system triggers a short, high-resolution burst capture to ensure 
+            at clear imaging. Exposure, shutter timing, and IR illumination are adjusted dynamically 
+            for day/night conditions.
           </p>
           <p><strong>Hardware:</strong> Global-shutter camera, IR illuminator, low-latency capture buffer.</p>
         </div>
@@ -74,7 +78,9 @@
         <div class="step-card">
           <h2><strong>2.</strong> Preprocessing & Plate Localization</h2>
           <p>
-            Captured frames are run through a preprocessing pipeline. A lightweight object detection model isolates vehicle and plate regions. Multiple candidate crops are kept and scored by quality metrics.
+            Captured frames are run through a preprocessing pipeline. A lightweight object detection 
+            model isolates vehicle and plate regions. Multiple candidate crops are kept and scored by 
+            quality metrics.
           </p>
           <p><strong>Software:</strong> Lightweight CNN detector, GPU/edge-accelerated preprocessing.</p>
         </div>
@@ -91,7 +97,9 @@
         <div class="step-card">
           <h2><strong>3.</strong> OCR & Confidence Scoring</h2>
           <p>
-            Crops are sent to an OCR engine optimized for variable fonts and partial occlusion. Multiple hypotheses are generated and ranked by confidence. Post-processing applies multiple AI-enhanced methods to increase accuracy and eliminate false positives.
+            Crops are sent to an OCR engine optimized for variable fonts and partial occlusion. Multiple 
+            hypotheses are generated and ranked by confidence. Post-processing applies multiple 
+            AI-enhanced methods to increase accuracy and eliminate false positives.
           </p>
         </div>
       </div>
@@ -107,7 +115,10 @@
         <div class="step-card">
           <h2><strong>4.</strong> Validation, Timestamping & Delivery</h2>
           <p>
-            Verified plates are timestamped, geo-tagged, and packaged with evidence frames. Secure delivery of violation packages to enforcement endpoints occurs over TLS; optionally batched to meet local retention and privacy policies. Audit logs and chain-of-custody metadata are included for legal acceptability.
+            Verified plates are timestamped, geo-tagged, and packaged with evidence frames. Secure delivery 
+            of violation packages to enforcement endpoints occurs over TLS; optionally batched to meet 
+            local retention and privacy policies. Audit logs and chain-of-custody metadata are included for 
+            legal acceptability.
           </p>
         </div>
       </div>
@@ -123,7 +134,10 @@
         <div class="step-card">
           <h2><strong>5.</strong> Ticket Determination Mobile Application</h2>
           <p>
-            Verified law enforcement personnel, including off-duty officers, securely receive and review incident packages to determine appropriate ticketing outcomes. The <strong>SecuriStop Mobile Application</strong>, developed in-house, facilitates this process by streamlining verification, evidence review, and decision-making for authorized police officers.
+            Verified law enforcement personnel, including off-duty officers, securely receive and review 
+            incident packages to determine appropriate ticketing outcomes. The SecuriStop Mobile 
+            Application, <strong>PatrolSight</strong>, developed in-house, facilitates this process by 
+            streamlining verification, evidence review, and decision-making for authorized police officers.
           </p>
         </div>
       </div>
