fixed typo on meet the team page

--- a/ourteam.html
+++ b/ourteam.html
@@ -68,10 +68,10 @@
           With a background in aerospace engineering and technology leadership, 
           Nick Canovas brings extensive experience to the role of CTO. In his previous position, 
           he worked as an aerospace engineer at NASA, where he contributed to research for advanced 
-          propulsion system techology and aircraft vehicle design. Nick has also previously worked for other various 
-          engineering firms across indsutry and government, driving innovation in system design, software architecture, and 
+          propulsion system techology and aircraft vehicle design. Nick has also previously worked for various 
+          engineering firms across industry and government, driving innovation in system design, software architecture, and 
           mission-critical hardware along the way. In his current role, Nick leads our technology roadmap, 
-          combining his deep systems engineering expertise with a vision for scalable, 
+          combining his deep multi-disciplinary systems engineering expertise with a vision for scalable, 
           high-impact solutions. He's committed to leveraging aerospace-grade rigor and industry 
           best practices to build the next generation of products and platforms - and to empower 
           our engineering teams to solve hard problems with clarity and creativity.
