oops forgot to change the text

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 
     <div class="contact-info">
       <p><strong>Email Us:</strong>  
-        <a href="mailto:general@securistop.com">hello@securistop.com</a>
+        <a href="mailto:general@securistop.com">general@securistop.com</a>
       </p>
       <p><strong>Call Us:</strong>  
         <a href="tel:+12027139191">(202) 713-9191</a>
